# AlleleFlux

./: .gitignore  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  alleleFlux.py  alleleFlux.sh  alleleFlux_api_runner.py  alleleFlux_runner.py  alleleflux_config.yml  environment.yml  pyproject.toml  run_sequential_workflow.sh  setup.py
.cursor/rules/: coding-preferences.mdc
.github/: copilot-instructions.md
.github/instructions/: environment.instructions.md  snakemake.instructions.md  tests.instructions.md
.github/workflows/: ci.yml  conda-build.yml  update-recipe.yml
alleleflux/: README.md  __init__.py  cli.py  main.py  runner.sh  workflow.py
alleleflux/accessory/: add_bam_path_to_metadata.py  create_mag_mapping.py  get_length.py
alleleflux/analysis/: allele_freq.py  cmh_scores.py  gene_scores.py  group_scores.py  profile_mags.py  scores.py  taxa_scores.py
alleleflux/deprecated/: make_blacklist.py  recombination.py
alleleflux/preprocessing/: eligibility_table.py  mag_metadata.py  preprocess_two_sample.py  preprocess_within_group.py  quality_control.py
alleleflux/scripts/: __init__.py
alleleflux/scripts/accessory/: __init__.py  add_bam_path_to_metadata.py  copy_filtered_mag_profiles.py  copy_mag_profiles.py  coverage_and_allele_stats.py  create_mag_mapping.py  get_length.py  list_mags.py  mean_coverage_per_position.py  positions_qc.py  terminal_nucleotide_analysis.py
alleleflux/scripts/analysis/: _allele_freq_common.py  allele_freq.py  allele_freq_cache.py  cmh_scores.py  gene_scores.py  outliers_genes.py  profile_mags.py  regional_contrast.py  scores.py  taxa_scores.py
alleleflux/scripts/deprecated/: main.py
alleleflux/scripts/evolution/: __init__.py  dnds_from_timepoints.py
alleleflux/scripts/preprocessing/: eligibility_table.py  mag_metadata.py  p_value_summary.py  preprocess_between_groups.py  preprocess_within_group.py  preprocessing_eligibility.py  quality_control.py  regional_contrast_summary.py
alleleflux/scripts/statistics/: CMH.py  LMM.py  single_sample.py  two_sample_paired.py  two_sample_unpaired.py
alleleflux/scripts/utilities/: logging_config.py  qc_metrics.py  utilities.py
alleleflux/scripts/visualization/: __init__.py  plot_allele_trajectory.py
alleleflux/scripts/visualization/accessory/: __init__.py  prepare_metadata.py  terminal_nucleotide_analysis.py  track_allele_frequencies.py
alleleflux/smk_workflow/: config.template.yml  config.yml  config_diet_manip.yml  config_soil_01.yml  config_soil_01_single.yml  config_soil_permuted_01.yml  config_soil_permuted_01_single.yml  config_test.yml  step1.smk  step2.smk
alleleflux/smk_workflow/accessory/: coverage_and_allele_stats.smk
alleleflux/smk_workflow/alleleflux_pipeline/: Snakefile
alleleflux/smk_workflow/alleleflux_pipeline/rules/: allele_analysis.smk  (+12 more)
alleleflux/smk_workflow/profile/: config.yaml
alleleflux/smk_workflow/shared/: common.smk
alleleflux/smk_workflow/slurm_profile/: config.yaml
alleleflux/smk_workflow/step1/: eligibility.smk  profiling.smk  quality_control.smk
alleleflux/smk_workflow/step2/: allele_analysis.smk  dnds_analysis.smk  gene_analysis.smk  scoring.smk  significance_between_groups.smk  significance_within_group.smk  targets.smk
alleleflux/smk_workflow/visualization/: visualization.smk  visualization_config.yaml  visualization_config_final.yaml
alleleflux/statistics/: CMH.py  LMM.py  single_sample.py  two_sample_paired.py  two_sample_unpaired.py
alleleflux/utilities/: utilities.py
conda-recipe/: build.sh  meta.yaml
docs/: MIGRATION_NOTES.md  Makefile  README.md  environment.yml  requirements.txt
docs/source/: conf.py  index.md  index.rst
docs/source/api/: analysis.rst  preprocessing.rst  statistics.rst
docs/source/examples/: generate_synthetic_data.py  tutorial.md  tutorial.rst  use_cases.md  use_cases.rst
docs/source/getting_started/: installation.md  installation.rst  overview.md  overview.rst  quickstart.md  quickstart.rst
docs/source/reference/: cli_reference.md  cli_reference_old.md  configuration.md  faq.md  inputs.md  inputs_old.md  outputs.md  outputs_old.md  statistical_tests.md
docs/source/scripts/: dnds_from_timepoints.md
docs/source/usage/: allele_freq_cache_architecture.md  dnds_analysis.md  input_preparation.md  input_preparation.rst  interpreting_results.md  interpreting_results.rst  regional_contrast_analysis.md  running_workflow.md  running_workflow.rst  visualization_guide.md
notebooks/: profile_optimization_comparison.ipynb
scripts/: LMM.py  analyze_allele_freq.py  analyze_allele_freq_old.py  eligibility_table.py  gene_scores.py  group_scores.py  mag_metadata.py  preprocess_two_sample.py  quality_control.py  scores.py  single_sample.py  supress_warning.py  two_sample_paired.py  two_sample_unpaired.py  utilities.py
scripts/accessory/: copy_filtered_mag_profiles.py  make_blacklist.py
smk_workflow/: allele_analysis.smk  common.smk  config.yml  example_sample_table.tsv  gene_analysis.smk  scoring.smk  significance_tests.smk  snakefile  snakefile2.smk  snakefile_old  step1.smk  step2.smk  targets.smk
smk_workflow/cornell_profile/: config.yaml
smk_workflow/rules/: allele_analysis.smk  common.smk  gene_analysis.smk  scoring.smk  significance_tests.smk  targets.smk
smk_workflow/shared/: common.smk
smk_workflow/step1/: quality_control.smk
smk_workflow/step2/: scoring.smk  significance_between_groups.smk  targets.smk
tests/: test_p_value_summary.py
tests/accessory/: __init__.py  test_coverage_and_allele_stats.py  test_mean_coverage_per_position.py  test_positions_qc.py  test_terminal_nucleotide_analysis.py
tests/analysis/: __init__.py  test_profile_mags.py
tests/evolution/: TEST_DOCUMENTATION.md  __init__.py  test_dnds_from_timepoints.py
tests/evolution/mock_data/: README.md
tests/preprocessing/: __init__.py  test_p_value_summary.py  test_quality_control.py
tests/statistics/: __init__.py  test_LMM.py  test_two_sample_paired.py  test_two_sample_unpaired.py
tests/utilities/: test_qc_metrics.py
tests/visualization/: test_terminal_nucleotide_analysis.py
(+52 files in other folders)
