[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AlleleFlux"
version = "0.0.1"
description = "AlleleFlux: A tool for fine grained evolutionary analysis of microbial populations and communities"
authors = [
    {name = "Siddhartha Uppal", email = "sidd.uppal96@gmail.com"},
    {name = "Andrew Moeller", email = "andrew.moeller@princeton.edu"}
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.7"

[project.scripts]
alleleflux = "alleleflux.cli:main"

# Analysis scripts
alleleflux-profile = "alleleflux.scripts.analysis.profile_mags:main"
alleleflux-allele-freq = "alleleflux.scripts.analysis.allele_freq:main"
alleleflux-scores = "alleleflux.scripts.analysis.scores:main"
alleleflux-taxa-scores = "alleleflux.scripts.analysis.taxa_scores:main"
alleleflux-gene-scores = "alleleflux.scripts.analysis.gene_scores:main"
alleleflux-outliers = "alleleflux.scripts.analysis.outliers_genes:main"
alleleflux-cmh-scores = "alleleflux.scripts.analysis.cmh_scores:main"

# Preprocessing scripts
alleleflux-metadata = "alleleflux.scripts.preprocessing.mag_metadata:main"
alleleflux-qc = "alleleflux.scripts.preprocessing.quality_control:main"
alleleflux-eligibility = "alleleflux.scripts.preprocessing.eligibility_table:main"
alleleflux-preprocess-between-groups = "alleleflux.scripts.preprocessing.preprocess_between_groups:main"
alleleflux-preprocess-within-group = "alleleflux.scripts.preprocessing.preprocess_within_group:main"
alleleflux-preprocessing-eligibility = "alleleflux.scripts.preprocessing.preprocessing_eligibility:main"
alleleflux-p-value-summary = "alleleflux.scripts.preprocessing.p_value_summary:main"

# Statistics scripts
alleleflux-lmm = "alleleflux.scripts.statistics.LMM:main"
alleleflux-single-sample = "alleleflux.scripts.statistics.single_sample:main"
alleleflux-two-sample-paired = "alleleflux.scripts.statistics.two_sample_paired:main"
alleleflux-two-sample-unpaired = "alleleflux.scripts.statistics.two_sample_unpaired:main"
alleleflux-cmh = "alleleflux.scripts.statistics.CMH:main"

# Evolution
alleleflux-dnds-from-timepoints = "alleleflux.scripts.evolution.dnds_from_timepoints:main"

# Accessory scripts
alleleflux-create-mag-mapping = "alleleflux.scripts.accessory.create_mag_mapping:main"
alleleflux-add-bam-path = "alleleflux.scripts.accessory.add_bam_path_to_metadata:main"
alleleflux-coverage-allele-stats = "alleleflux.scripts.accessory.coverage_and_allele_stats:main"
alleleflux-list-mags = "alleleflux.scripts.accessory.list_mags:main"
alleleflux-positions-qc = "alleleflux.scripts.accessory.positions_qc:main"
alleleflux-copy-profiles = "alleleflux.scripts.accessory.copy_mag_profiles:main"

# Visualization scripts
alleleflux-prepare-metadata = "alleleflux.scripts.visualization.accessory.prepare_metadata:main"
alleleflux-terminal-nucleotide = "alleleflux.scripts.visualization.accessory.terminal_nucleotide_analysis:main"
alleleflux-track-alleles = "alleleflux.scripts.visualization.accessory.track_allele_frequencies:main"
alleleflux-plot-trajectories = "alleleflux.scripts.visualization.plot_allele_trajectory:main"

[tool.setuptools.package-data]
# Include the runner script AND everything inside the smk_workflow directory
alleleflux = ["smk_workflow/**"] 

[project.urls]
"Homepage" = "https://github.com/MoellerLabPU/AlleleFlux"
"Bug Tracker" = "https://github.com/MoellerLabPU/AlleleFlux/issues"

[tool.isort]
profile = "black"
line_length = 88 

[tool.esbonio.sphinx]
buildCommand = ["sphinx-build", "-M", "html", "docs/source", "${defaultBuildDir}"]